Fix to align problem in the drawer view
bzr revid: mit@openerp.com-20120410123923-uuaix1zn7ob1feae

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -952,6 +952,7 @@ $colour4: #8a89ba
             width: 410px
             display: none
             border: 1px solid #ccc
+            text-align: left
 
             .oe_searchview_filters
                 display: table
